# interview-botelo

./: .env.example  .gitignore  README.md  TEST_PR.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/db/: seed_questions.py  session.py
backend/app/models/: __init__.py  interview_answer.py  interview_session.py  plan.py  progress.py  question.py  resume.py  user.py
backend/app/services/: ai_proxy.py  auth.py  csrf.py  emailer.py  rate_limit.py  security.py  vacancy_ingest.py
backend/tests/: conftest.py  test_auth.py  test_plan_generation.py  test_questions.py  test_resume_upload.py
deploy/: deploy.sh  nginx.conf
docs/: TZ.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/dashboard/: page.jsx
frontend/app/login/: page.jsx
frontend/app/signup/: page.jsx
frontend/lib/: api.js
frontend/tests/: api.test.js
