[project]
name = "interview-coach-backend"
version = "0.1.0"
description = "Interview Coach backend"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "passlib[argon2]>=1.7.4",
  "argon2-cffi>=23.1.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "striprtf>=0.0.26",
  "python-docx>=1.1.2",
  "email-validator>=2.1.0",
]

[project.optional-dependencies]
 dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "aiosqlite>=0.20.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
